# esdesktop

./: .gitignore  AUTHORS  HACKING  Makefile.am  NEWS  README.md  autogen.sh  configure.ac.in  esdesktop.1
backgrounds/: Makefile.am
common/: Makefile.am  esdesktop-common.c  esdesktop-common.h  esdesktop-thumbnailer.c  esdesktop-thumbnailer.h
doc/: Makefile.am  README.esconf  README.kiosk
pixmaps/: Makefile.am
po/: POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  be@tarask.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  (+30 more)
settings/: Makefile.am  esdesktop-settings-ui.glade  expidus-backdrop-settings.desktop.in.in  main.c
src/: Makefile.am  esdesktop-application.c  esdesktop-application.h  esdesktop-clipboard-manager.c  esdesktop-clipboard-manager.h  esdesktop-file-icon-manager.c  esdesktop-file-icon-manager.h  esdesktop-file-icon.c  esdesktop-file-icon.h  esdesktop-file-manager-dbus.xml  esdesktop-file-utils.c  esdesktop-file-utils.h  esdesktop-icon-view-manager.c  esdesktop-icon-view-manager.h  esdesktop-icon-view.c  esdesktop-icon-view.h  esdesktop-icon.c  esdesktop-icon.h  esdesktop-lunar-dbus.xml  esdesktop-notify.c  esdesktop-notify.h  esdesktop-regular-file-icon.c  esdesktop-regular-file-icon.h  esdesktop-special-file-icon.c  esdesktop-special-file-icon.h  esdesktop-trash-dbus.xml  esdesktop-volume-icon.c  esdesktop-volume-icon.h  esdesktop-window-icon-manager.c  esdesktop-window-icon-manager.h  esdesktop-window-icon.c  esdesktop-window-icon.h  expidus-backdrop.c  expidus-backdrop.h  expidus-desktop.c  expidus-desktop.h  expidus-workspace.c  expidus-workspace.h  main.c  menu.c  (+3 more)
